qhouyee/89/server-side-filters: FIXED UNIT TESTS